# enosim

./: .coveragerc  .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  MANIFEST.in  README.md  conftest.py  database.db  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.py  test-analyze-scoreboard.py  test-attack.py  test-db.py  test-parse-scoreboard.py  test-statcheck.py  test-templates.py  test.py
.github/workflows/: tests.yml
config/: config.json  secrets.json
config/examples/: azure.config.json  config.json  hetzner.config.json  secrets.json
enosimulator/: __main__.py  config.json  container_single.py  containers.py  main.py  orchestrator.py  setup.py  shelp.py  sim.py  simulation.py  tcon.py  teamgen.py  template_converter.py  types.py  types_.py
enosimulator/backend/: app.py  schema.sql
enosimulator/config/: config.json  secrets.json
enosimulator/setup/: __init__.py  setup.py  setuphelper.py  shelp.py  teamgen.py  types.py
enosimulator/sim/: __init__.py  flagsubmitter.py  orchestrator.py  sim.py
enosimulator/simulation/: __init__.py  flagsubmitter.py  orchestrator.py  simulation.py  statchecker.py  util.py
frontend/: Dockerfile  package-lock.json  package.json  postcss.config.ejs  tailwind.config.cjs  tailwind.config.js  tsconfig.json
frontend/app/: layout.tsx  page.tsx
frontend/components/: navbar.tsx  servicestats.tsx  sidebar.tsx  teamstats.tsx  theme-provider.tsx  vmcharts.tsx  vmstats.tsx
tests/: README.md  conftest.py  test_setup.py  test_simulation.py
util/: scoreboard_analysis.py
(+114 files in other folders)
