[build-system]
requires = ["setuptools>=67", "setuptools_scm[toml] >= 6.2", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
version_file = "enosimulator/_version.py"

[tool.isort]
multi_line_output = 3
line_length = 88
include_trailing_comma = true

[tool.black]
line_length = 88

[tool.pydocstringformatter]
max-line-length = 88
linewrap-full-docstring = true
